--- a/package.json
+++ b/package.json
@@ -18,21 +18,29 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-table": "^8.21.3",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.556.0",
+    "motion": "^12.23.6",
     "next": "16.0.10",
     "next-auth": "^5.0.0-beta.27",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.9.17",
+    "nuqs": "^2.8.6",
     "react": "19.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.69.0",
     "slugify": "^1.6.6",
